--- a/.coveragerc
+++ b/.coveragerc
@@ -11,6 +11,7 @@ exclude_lines =
     def __repr__
     # Have to re-enable the standard pragma
     pragma: no cover
+    Protocol
 
     # Don't complain if tests don't hit defensive assertion code:
     raise AssertionError
