--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,3 +59,6 @@ include = ["pipewine/**/*.py", "LICENSE"]
 [[tool.mypy.overrides]]
 module = "billiard.*"
 ignore_missing_imports = true
+
+[tool.mypy]
+check_untyped_defs = true
