Update coverage settings

--- a/.coveragerc
+++ b/.coveragerc
@@ -20,6 +20,6 @@ exclude_lines =
     # Don't complain about abstract methods, they aren't run:
     @(abc\.)?abstractmethod
     @(abc\.)?abstractclassmethod
-    @t.overload
+    @overload
 omit =
     tests/**
