--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ dev = [
     "hatch",
     "pydantic",
 ]
-docs = ["mkdocs", "mkdocs-material"]
+docs = ["mkdocs", "mkdocs-material", "mkdocstrings-python", "mkdocs-autoapi"]
 
 [project.scripts]
 pipewine = "pipewine.cli.main:main"
