--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,3 +30,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Upload coverage to coveralls
+      run: |
+        coveralls
